--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.21.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-slider": "^1.2.3",
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "@tailwindcss/vite": "^4.0.9",
@@ -23,6 +25,7 @@
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^3.0.2",
